k8s/knative-service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: function
spec:
  template:
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/demo-appdev/function
          env:
            - name: QUARKUS_DATASOURCE_JDBC_URL
              value: "jdbc:postgresql://database/appli"
