k8s/triggers.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: el-demo-appdev
spec:
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: el-demo-appdev
    weight: 100
